Create folders and classes basics

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,14 +46,16 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scrpts\Enemy\BossEnemy.cs" />
-     <Compile Include="Assets\Scrpts\Enemy\Enemy.cs" />
-     <Compile Include="Assets\Scrpts\Enemy\FastEnemy.cs" />
-     <Compile Include="Assets\Scrpts\Enemy\KamikazeEnemy.cs" />
-     <Compile Include="Assets\Scrpts\Enemy\NormalEnemy.cs" />
-     <Compile Include="Assets\Scrpts\Enemy\SlowEnemy.cs" />
-     <Compile Include="Assets\Scrpts\Weapon\Pistol.cs" />
-     <Compile Include="Assets\Scrpts\Weapon\Weapon.cs" />
+     <Compile Include="Assets\Scripts\Enemy\BossEnemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\FastEnemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\KamikazeEnemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\NormalEnemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\SlowEnemy.cs" />
+     <Compile Include="Assets\Scripts\MainCamera.cs" />
+     <Compile Include="Assets\Scripts\Utils\UnitySpaceUtils.cs" />
+     <Compile Include="Assets\Scripts\Weapon\Pistol.cs" />
+     <Compile Include="Assets\Scripts\Weapon\Weapon.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
