--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\Scripts\Enemy\NormalEnemy.cs" />
      <Compile Include="Assets\Scripts\Enemy\SlowEnemy.cs" />
      <Compile Include="Assets\Scripts\MainCamera.cs" />
+     <Compile Include="Assets\Scripts\Player\Player.cs" />
      <Compile Include="Assets\Scripts\Utils\UnitySpaceUtils.cs" />
      <Compile Include="Assets\Scripts\Weapon\Pistol.cs" />
      <Compile Include="Assets\Scripts\Weapon\Weapon.cs" />
